# medcoolteste

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7e078f080a51_initial_users_patient_profiles_.py  a1b2c3d4e5f6_f2_specialties_and_professional_links.py  a1f2b3c4d5e6_f3_part2_video_sessions.py  a9b0c1d2e3f4_f4_cancellation_policy.py  b2c3d4e5f6a7_f2_professional_presence.py  b8c9d0e1f2a3_f4_pagarme_integration.py  c24edfd90924_add_admin_role_and_verification_reason.py  c3d4e5f6a7b8_f2_dynamic_pricing_and_quotes.py  d1e2f3a4b5c6_f4_part_4b_professional_payouts.py  d4e5f6a7b8c9_f2_consult_requests_and_matching.py  e2f3a4b5c6d7_f5_part1_medical_documents.py  e5f6a7b8c9d0_f2_counter_offers.py  f3a4b5c6d7e8_f3_part1_chat_messages.py  f6a7b8c9d0e1_f4_payments_domain.py
backend/app/: main.py
backend/app/api/: admin.py  admin_financial.py  auth.py  chat_ws.py  deps.py  patients.py  professionals.py  routes.py  specialties.py  video_ws.py  webhooks.py
backend/medcoolteste_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_admin.py  test_admin_financials.py  test_auth.py  test_cancellation.py  test_chat.py  test_consult_requests.py  test_counter_offers.py  test_medical_documents.py  test_patient_history.py  test_payments.py  test_payments_integration_pagarme.py  test_presence.py  test_pricing.py  test_professional_financials.py  test_professional_history.py  test_routes.py  test_specialties.py  test_video.py
(+56 files in other folders)
